Chore: netlify.toml redirects 추가

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,8 @@
   to = "http://13.209.201.210:5000/api/:splat"
   status = 200
   force = true
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
